# cupyxturbo

./: .gitignore  README.md  cleanup.py  gpu-profile-1.txt  gpu-profile-2.txt  gpu-profile.txt  macos.spec  pyproject.toml  pysidedeploy.spec  pysidedeploy_win.spec  turboapp.spec
scipyturbo/: turbo_main.py  turbo_simulator.py  turbo_simulator_cufft.py  turbo_simulator_fps.py  turbo_simulator_numba.py  turbo_wrapper.py
