[project]
name = "mannetroll-cupyxturbo"
version = "0.1.0"
description = "2D Turbulence (SciPy + CuPy)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }

authors = [
  { name = "Torbjörn Sjögren" }
]

dependencies = [
    "numpy>=2.0.0",
    "pillow>=10.0",
    "PyQt6>=6.7",
    "scipy>=1.16.3",
    "scipy-stubs~=1.16.3",
]

# Optional GPU extra
[project.optional-dependencies]
gpu = ["cupy>=13.0"]

[project.scripts]
scipyturbo = "scipyturbo.scipy_main:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["scipyturbo"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
